# tauri-bindgen-ts

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs
tauri-bindgen-ts-macro/: .gitignore  Cargo.toml
tauri-bindgen-ts-macro/src/: lib.rs
