[package]
name = "tauri-bindgen-ts"
version = "0.1.0-alpha02"
edition = "2021"
description = "Generate Typescript bindings to Rust types and functions in a Tauri app"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniusnaumann/tauri-bindgen-ts"
authors = ["Antonius Naumann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts-rs = "6.2.0"
tauri-bindgen-ts-macro = { path = "./tauri-bindgen-ts-macro", version = "0.1.0-alpha02" }
serde = { version = "1.0.145", features = ["derive"] }
