[package]
name = "tauri-bindgen-ts-macro"
version = "0.1.0-alpha02"
edition = "2021"
description = "Macro for tauri-bindgen-ts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniusnaumann/tauri-bindgen-ts"
authors = ["Antonius Naumann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.102", features = ["extra-traits", "full"] }